--- a/compendium/guide.html
+++ b/compendium/guide.html
@@ -89,7 +89,7 @@
 
 <p>You gain <em>XP</em> from defeating enemies. You gain more XP when the enemies you defeat are closer to your level or above it.</p>
 
-<p>Each time you level up, you gain 20 <em>HP</em> and 20 <em>EP</em>, and your HP and EP are fully restored.</p>
+<p>Each time you level up, your <em>HP</em> and <em>EP</em> are fully restored and their maximums increase by 20.</p>
 
 <table>
   <thead>
@@ -846,7 +846,7 @@
 
 <ul>
   <li><span id="attacking"><strong>Attacking</strong> <img src="/assets/img/icons/attack.gif" alt="Sword" /></span> strikes the enemy with your equipped weapon. Also referred to as a <em>regular attack</em>.</li>
-  <li><strong>Defending</strong> <img src="/assets/img/icons/defend.gif" alt="Shield" /> increases your chance to block the next attack by 25% and restores EP. If the next attack is successfully blocked, you gain an EP boost.
+  <li><strong>Defending</strong> <img src="/assets/img/icons/defend.gif" alt="Shield" /> increases your chance to block the next attack by a flat 25% and restores EP. If the next attack is successfully blocked, you gain an EP boost.
     <details style="margin-bottom: 0.5em;">
       <summary class="small-text"><em>How much EP?</em></summary>
 
@@ -915,7 +915,7 @@
 <p>There are <em>2</em> special moves available in battle. These actions can also be performed outside of battle.</p>
 
 <ul>
-  <li><strong>Changing equipment</strong> <img src="/assets/img/icons/inventory.gif" alt="Body Armour" /> allows you to use a turn to equip a different item from your inventory. You will take an additional turn to recover.</li>
+  <li><strong>Changing equipment</strong> <img src="/assets/img/icons/inventory.gif" alt="Body Armour" /> allows you to use a turn to equip a different item from your inventory.</li>
   <li><strong>Drinking a potion</strong> <img src="/assets/img/icons/potion.gif" alt="Potion" /> restores HP. It requires you to have at least one vial of life fluid.
     <details>
       <summary class="small-text"><em>How much HP?</em></summary>
@@ -940,7 +940,7 @@
 
 <p>An enemy may attack a party member. If a party member loses all their HP, they will be unable to fight until they rest at their house or an inn.</p>
 
-<p>Party members gain the same amount of XP as you after each battle. When they level up, they will gain 20 HP and allocate 5 stat points to one of their primary stats.</p>
+<p>Party members gain the same amount of XP as you after each battle. When they level up, they will gain 20 max HP and allocate 5 stat points to one of their primary stats.</p>
 
 <table>
   <thead>
