--- a/compendium/miscellaneous.html
+++ b/compendium/miscellaneous.html
@@ -149,6 +149,18 @@
       <td><span id="the-good-stuff!" class="record-name">The good stuff!</span><br /><img src="/assets/img/miscellaneous/the good stuff!.gif" alt="The good stuff!" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">6000</span></td>
       <td>Doubles your drop chance. May also kill you.</td>
     </tr>
+    <tr>
+      <td><span id="boulderwort" class="record-name">Boulderwort</span><br /><img src="/assets/img/miscellaneous/boulderwort.gif" alt="Boulderwort" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">100</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#moghi">Moghi</a></li></ul></details></td>
+      <td>Protects against grounding. Crumbles after 200 steps.</td>
+    </tr>
+    <tr>
+      <td><span id="prickly-pear" class="record-name">Prickly Pear</span><br /><img src="/assets/img/miscellaneous/prickly pear.gif" alt="Prickly Pear" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">100</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#mirage">Mirage</a></li></ul></details></td>
+      <td>Protects against burning. Dries up after 200 steps.</td>
+    </tr>
+    <tr>
+      <td><span id="snowdrops" class="record-name">Snowdrops</span><br /><img src="/assets/img/miscellaneous/snowdrops.gif" alt="Snowdrops" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">100</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#winter-babuni">Winter Babuni</a></li></ul></details></td>
+      <td>Protects against freezing. Wilts after 200 steps.</td>
+    </tr>
   </tbody>
 </table>
 
