--- a/compendium/shields.html
+++ b/compendium/shields.html
@@ -229,7 +229,7 @@
       <td><span class="quiet-text">None</span></td>
     </tr>
     <tr>
-      <td><span id="force-gauntlets" class="record-name">Force Gauntlets</span><br /><img src="/assets/img/shields/force gauntlets.gif" alt="Force Gauntlets" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#black-knight">Black Knight</a></li><li><a href="enemies#royal-cryomancer">Royal Cryomancer</a></li><li><a href="enemies#royal-pyromancer">Royal Pyromancer</a></li></ul></details></td>
+      <td><span id="force-gauntlets" class="record-name">Force Gauntlets</span><br /><img src="/assets/img/shields/force gauntlets.gif" alt="Force Gauntlets" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#black-knight">Black Knight</a></li><li><a href="enemies#royal-pyromancer">Royal Pyromancer</a></li><li><a href="enemies#royal-cryomancer">Royal Cryomancer</a></li></ul></details></td>
       <td>10</td>
       <td><div class="bar"><span class="bar-fill" style="width:37%;"></span></div><span class="small-text ">15</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="small-text ">0%</span></td>
@@ -264,7 +264,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:25%;"></span></div><span class="small-text water">25% Water</span></td>
     </tr>
     <tr>
-      <td><span id="flame-guard" class="record-name">Flame Guard</span><br /><img src="/assets/img/shields/flame guard.gif" alt="Flame Guard" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#royal-pyromancer">Royal Pyromancer</a></li><li><a href="enemies#lava-spirit">Lava Spirit</a></li><li><a href="enemies#magma-planet">Magma Planet</a></li><li><a href="enemies#magus's-henchman">Magus’s Henchman</a></li></ul></details></td>
+      <td><span id="flame-guard" class="record-name">Flame Guard</span><br /><img src="/assets/img/shields/flame guard.gif" alt="Flame Guard" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#royal-pyromancer">Royal Pyromancer</a></li><li><a href="enemies#lava-spirit">Lava Spirit</a></li><li><a href="enemies#magus's-henchman">Magus’s Henchman</a></li><li><a href="enemies#magma-planet">Magma Planet</a></li></ul></details></td>
       <td>55</td>
       <td><div class="bar"><span class="bar-fill" style="width:65%;"></span></div><span class="small-text ">26</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:45%;"></span></div><span class="small-text ">5%</span></td>
