--- a/compendium/weapons.html
+++ b/compendium/weapons.html
@@ -111,6 +111,13 @@
       <td><div class="bar"><span class="bar-fill" style="width:40%;"></span></div><span class="small-text ">10%</span></td>
     </tr>
     <tr>
+      <td><span id="aluminum-bat" class="record-name">Aluminum Bat</span></span><br /><span class="small-text">Bludgeon</span><br /><img src="/assets/img/weapons/aluminum bat.gif" alt="Aluminum Bat" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1031</span></td>
+      <td>10</td>
+      <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">80%</span></td>
+      <td><div class="bar"><span class="bar-fill" style="width:29%;"></span></div><span class="small-text ">31</span></td>
+      <td><div class="bar"><span class="bar-fill" style="width:40%;"></span></div><span class="small-text ">10%</span></td>
+    </tr>
+    <tr>
       <td><span id="macedonian-mace" class="record-name earth">Macedonian Mace</span></span><br /><span class="small-text">Bludgeon</span><br /><img src="/assets/img/weapons/macedonian mace.gif" alt="Macedonian Mace" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#wandering-giant">Wandering Giant</a></li></ul></details></td>
       <td>50</td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">80%</span></td>
@@ -321,7 +328,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:32%;"></span></div><span class="small-text ">8%</span></td>
     </tr>
     <tr>
-      <td><span id="helm-splitter" class="record-name">Helm Splitter</span></span><br /><span class="small-text">Axe</span><br /><img src="/assets/img/weapons/helm splitter.gif" alt="Helm Splitter" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
+      <td><span id="helm-splitter" class="record-name">Helm Splitter</span></span><br /><span class="small-text">Axe</span><br /><img src="/assets/img/weapons/helm splitter.gif" alt="Helm Splitter" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:70%;"></span></div><span class="small-text ">70%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">85</span></td>
@@ -428,6 +435,13 @@
       <td><div class="bar"><span class="bar-fill" style="width:27.2%;"></span></div><span class="small-text ">6.8%</span></td>
     </tr>
     <tr>
+      <td><span id="pumpkin-crossbow" class="record-name earth">Pumpkin Crossbow</span></span><br /><img src="/assets/img/weapons/pumpkin crossbow.gif" alt="Pumpkin Crossbow" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1031</span></td>
+      <td>10</td>
+      <td><div class="bar"><span class="bar-fill" style="width:50%;"></span></div><span class="small-text ">50%</span></td>
+      <td><div class="bar"><span class="bar-fill" style="width:29%;"></span></div><span class="small-text ">31</span></td>
+      <td><div class="bar"><span class="bar-fill" style="width:12.4%;"></span></div><span class="small-text ">3.1%</span></td>
+    </tr>
+    <tr>
       <td><span id="oak-bow" class="record-name">Oak Bow</span></span><br /><img src="/assets/img/weapons/oak bow.gif" alt="Oak Bow" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">2000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#rebel-archer">Rebel Archer</a></li></ul></details></td>
       <td>60</td>
       <td><div class="bar"><span class="bar-fill" style="width:50%;"></span></div><span class="small-text ">50%</span></td>
@@ -490,6 +504,13 @@
       <td>10</td>
       <td><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="small-text ">Always hits</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:9%;"></span></div><span class="small-text ">10</span></td>
+      <td><div class="bar"><span class="bar-fill" style="width:0.4%;"></span></div><span class="small-text ">0.1%</span></td>
+    </tr>
+    <tr>
+      <td><span id="witch's-wand" class="record-name frostfire">Witch's Wand</span></span><br /><img src="/assets/img/weapons/witch's wand.gif" alt="Witch's Wand" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1031</span></td>
+      <td>10</td>
+      <td><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="small-text ">Always hits</span></td>
+      <td><div class="bar"><span class="bar-fill" style="width:29%;"></span></div><span class="small-text ">31</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:0.4%;"></span></div><span class="small-text ">0.1%</span></td>
     </tr>
     <tr>
