--- a/compendium/armour.html
+++ b/compendium/armour.html
@@ -390,7 +390,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:35%;"></span></div><span class="small-text earth">35% Earth</span></td>
     </tr>
     <tr>
-      <td><span id="guardian-plate" class="record-name">Guardian Plate</span><br /><img src="/assets/img/armour/guardian plate.gif" alt="Guardian Plate" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">8000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#phalanx-captain">Phalanx Captain</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#cychreides">Cychreides</a></li><li><a href="enemies#skolopendra">Skolopendra</a></li><li><a href="enemies#lina3">Fur Apparition</a></li></ul></details></td>
+      <td><span id="guardian-plate" class="record-name">Guardian Plate</span><br /><img src="/assets/img/armour/guardian plate.gif" alt="Guardian Plate" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">8000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#phalanx-captain">Phalanx Captain</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#skolopendra">Skolopendra</a></li><li><a href="enemies#cychreides">Cychreides</a></li><li><a href="enemies#lina3">Fur Apparition</a></li></ul></details></td>
       <td>90</td>
       <td><div class="bar"><span class="bar-fill" style="width:95%;"></span></div><span class="small-text ">38</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:20%;"></span></div><span class="small-text physical">20% Physical</span></td>
@@ -438,7 +438,6 @@
 <ul>
   <li><a href="#hopalong-boots">Hopalong Boots</a></li>
 </ul>
-
 
           </div>
 
