--- a/compendium/miscellaneous.html
+++ b/compendium/miscellaneous.html
@@ -256,6 +256,22 @@
       <td><span id="sigil-of-ascension" class="record-name">Sigil of Ascension</span><br /><img src="/assets/img/miscellaneous/sigil of ascension.gif" alt="Sigil of Ascension" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span></td>
       <td>Grants the bearer 5 rank points for every kill.</td>
     </tr>
+    <tr>
+      <td><span id="ichor-of-talos" class="record-name">Ichor of Talos</span><br /><img src="/assets/img/miscellaneous/ichor of talos.gif" alt="Ichor of Talos" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">0</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#talos">Talos</a></li></ul></details></td>
+      <td>The blood of an “immortal”.</td>
+    </tr>
+    <tr>
+      <td><span id="heroic-weapon-enchantment" class="record-name">Heroic Weapon Enchantment</span><br /><img src="/assets/img/miscellaneous/heroic weapon enchantment.gif" alt="Heroic Weapon Enchantment" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">100000</span></td>
+      <td>Instantly upgrades your equipped weapon.</td>
+    </tr>
+    <tr>
+      <td><span id="heroic-armour-enchantment" class="record-name">Heroic Armour Enchantment</span><br /><img src="/assets/img/miscellaneous/heroic armour enchantment.gif" alt="Heroic Armour Enchantment" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">100000</span></td>
+      <td>Instantly upgrades your equipped armour.</td>
+    </tr>
+    <tr>
+      <td><span id="heroic-shield-enchantment" class="record-name">Heroic Shield Enchantment</span><br /><img src="/assets/img/miscellaneous/heroic shield enchantment.gif" alt="Heroic Shield Enchantment" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">100000</span></td>
+      <td>Instantly upgrades your equipped shield.</td>
+    </tr>
   </tbody>
 </table>
 
