--- a/compendium/skills.html
+++ b/compendium/skills.html
@@ -140,12 +140,12 @@
     <tr>
       <td><span id="pummeler's-precision" class="record-name">Pummeler's Precision</span><br /><span class="small-text">Bludgeon only</span></td>
       <td>30</td>
-      <td><ul><li class="user-stat-changes">User stat changes<ul style="list-style-type: none;"><li>+2% critical chance</li><li>+3% accuracy</li></ul></li></ul></td>
+      <td><ul><li class="user-stat-changes">User stat changes<ul style="list-style-type: none;"><li>+3% critical chance</li><li>+3% accuracy</li></ul></li></ul></td>
     </tr>
     <tr>
       <td><span id="gashmaster's-grace" class="record-name">Gashmaster's Grace</span><br /><span class="small-text">Axe only</span></td>
       <td>30</td>
-      <td><ul><li class="user-stat-changes">User stat changes<ul style="list-style-type: none;"><li>+5% accuracy</li><li>+25% critical damage</li></ul></li></ul></td>
+      <td><ul><li class="user-stat-changes">User stat changes<ul style="list-style-type: none;"><li>+5% accuracy</li><li>+30% critical damage</li></ul></li></ul></td>
     </tr>
     <tr>
       <td><span id="impaler's-impulse" class="record-name">Impaler's Impulse</span><br /><span class="small-text">Spear only</span></td>
@@ -243,7 +243,7 @@
     <tr>
       <td><span id="mudslide" class="record-name earth">Mudslide</span><div class="bar"><span class="bar-fill" style="width:20%;"></span></div><span class="small-text ">Damage</span></td>
       <td>10</td>
-      <td><ul><li class="opponent-stat-changes">Opponent stat changes<ul style="list-style-type: none;"><li>-1% accuracy</li></ul></li></ul></td>
+      <td><ul><li class="opponent-stat-changes">Opponent stat changes<ul style="list-style-type: none;"><li>-1% accuracy<a href="#legend">*</a></li></ul></li></ul></td>
     </tr>
     <tr>
       <td><span id="icicles" class="record-name ice">Icicles</span><div class="bar"><span class="bar-fill" style="width:30%;"></span></div><span class="small-text ">Damage</span></td>
@@ -293,7 +293,7 @@
     <tr>
       <td><span id="mist" class="record-name">Mist</span></td>
       <td>35</td>
-      <td><ul><li class="opponent-stat-changes">Opponent stat changes<ul style="list-style-type: none;"><li>-20% water reduction</li><li>-5% accuracy</li></ul></li></ul></td>
+      <td><ul><li class="opponent-stat-changes">Opponent stat changes<ul style="list-style-type: none;"><li>-5% water reduction</li><li>-5% accuracy<a href="#legend">*</a></li></ul></li></ul></td>
     </tr>
     <tr>
       <td><span id="scorch" class="record-name fire">Scorch</span><div class="bar"><span class="bar-fill" style="width:46%;"></span></div><span class="small-text ">Damage</span></td>
@@ -303,7 +303,7 @@
     <tr>
       <td><span id="duststorm" class="record-name earth">Duststorm</span><div class="bar"><span class="bar-fill" style="width:50%;"></span></div><span class="small-text ">Damage</span></td>
       <td>40</td>
-      <td><ul><li class="opponent-stat-changes">Opponent stat changes<ul style="list-style-type: none;"><li>-1% accuracy</li></ul></li></ul><ul style="margin-top: 0.5em;"><li>Hits 5 times</li></ul></td>
+      <td><ul><li class="opponent-stat-changes">Opponent stat changes<ul style="list-style-type: none;"><li>-1% accuracy<a href="#legend">*</a></li></ul></li></ul><ul style="margin-top: 0.5em;"><li>Hits 5 times</li></ul></td>
     </tr>
     <tr>
       <td><span id="hailstorm" class="record-name ice">Hailstorm</span><div class="bar"><span class="bar-fill" style="width:60%;"></span></div><span class="small-text ">Damage</span></td>
@@ -358,7 +358,7 @@
     <tr>
       <td><span id="derecho" class="record-name lightning">Derecho</span><div class="bar"><span class="bar-fill" style="width:90%;"></span></div><span class="small-text ">Damage</span></td>
       <td>80</td>
-      <td><ul><li class="opponent-stat-changes">Opponent stat changes<ul style="list-style-type: none;"><li>-1% accuracy</li></ul></li></ul><ul style="margin-top: 0.5em;"><li>Hits 9 times</li></ul></td>
+      <td><ul><li class="opponent-stat-changes">Opponent stat changes<ul style="list-style-type: none;"><li>-1% accuracy<a href="#legend">*</a></li></ul></li></ul><ul style="margin-top: 0.5em;"><li>Hits 9 times</li></ul></td>
     </tr>
     <tr>
       <td><span id="stratosphere" class="record-name">Stratosphere</span></td>
@@ -416,11 +416,17 @@
     </tr>
     <tr>
       <td><span id="inner-zen" class="record-name">Inner Zen</span></td>
-      <td>25</td>
-      <td><ul><li class="user-stat-changes">User stat changes<ul style="list-style-type: none;"><li>+4% accuracy</li><li>+2% critical chance</li><li>+20% critical damage</li></ul></li></ul></td>
+      <td>30</td>
+      <td><ul><li class="user-stat-changes">User stat changes<ul style="list-style-type: none;"><li>+2% accuracy</li><li>+1% critical chance</li><li>+20% critical damage</li></ul></li></ul></td>
     </tr>
   </tbody>
 </table>
+
+<div id="legend"><hr /></div>
+
+<h2 id="note-about-accuracy-reducing-skills">Note about accuracy-reducing skills</h2>
+
+<p>*Skills that reduce accuracy will have no effect on accuracy if it is 50% or lower.</p>
 
           </div>
 
