--- a/compendium/weapons.html
+++ b/compendium/weapons.html
@@ -153,7 +153,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:40%;"></span></div><span class="small-text ">10%</span></td>
     </tr>
     <tr>
-      <td><span id="gyroscopic-flange" class="record-name">Gyroscopic Flange</span></span><br /><span class="small-text">Bludgeon</span><br /><img src="/assets/img/weapons/gyroscopic flange.gif" alt="Gyroscopic Flange" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#harpy">Harpy</a></li><li><a href="enemies#pterripus">Pterripus</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
+      <td><span id="gyroscopic-flange" class="record-name">Gyroscopic Flange</span></span><br /><span class="small-text">Bludgeon</span><br /><img src="/assets/img/weapons/gyroscopic flange.gif" alt="Gyroscopic Flange" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#harpy">Harpy</a></li><li><a href="enemies#pterripus">Pterripus</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">80%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:71%;"></span></div><span class="small-text ">75</span></td>
@@ -251,7 +251,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">20%</span></td>
     </tr>
     <tr>
-      <td><span id="golden-sun" class="record-name">Golden Sun</span></span><br /><span class="small-text">Sword</span><br /><img src="/assets/img/weapons/golden sun.gif" alt="Golden Sun" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#stymphalian-bird">Stymphalian Bird</a></li><li><a href="enemies#teumessian-fox">Teumessian Fox</a></li><li><a href="enemies#nemean-lion">Nemean Lion</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
+      <td><span id="golden-sun" class="record-name">Golden Sun</span></span><br /><span class="small-text">Sword</span><br /><img src="/assets/img/weapons/golden sun.gif" alt="Golden Sun" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#stymphalian-bird">Stymphalian Bird</a></li><li><a href="enemies#nemean-lion">Nemean Lion</a></li><li><a href="enemies#teumessian-fox">Teumessian Fox</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:90%;"></span></div><span class="small-text ">90%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:76%;"></span></div><span class="small-text ">80</span></td>
@@ -328,7 +328,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:32%;"></span></div><span class="small-text ">8%</span></td>
     </tr>
     <tr>
-      <td><span id="helm-splitter" class="record-name">Helm Splitter</span></span><br /><span class="small-text">Axe</span><br /><img src="/assets/img/weapons/helm splitter.gif" alt="Helm Splitter" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
+      <td><span id="helm-splitter" class="record-name">Helm Splitter</span></span><br /><span class="small-text">Axe</span><br /><img src="/assets/img/weapons/helm splitter.gif" alt="Helm Splitter" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:70%;"></span></div><span class="small-text ">70%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">85</span></td>
@@ -384,7 +384,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:32%;"></span></div><span class="small-text ">8%</span></td>
     </tr>
     <tr>
-      <td><span id="ornate-halberd" class="record-name">Ornate Halberd</span></span><br /><span class="small-text">Spear</span><br /><img src="/assets/img/weapons/ornate halberd.gif" alt="Ornate Halberd" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#minotaur">Minotaur</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
+      <td><span id="ornate-halberd" class="record-name">Ornate Halberd</span></span><br /><span class="small-text">Spear</span><br /><img src="/assets/img/weapons/ornate halberd.gif" alt="Ornate Halberd" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#minotaur">Minotaur</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:60%;"></span></div><span class="small-text ">60%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">85</span></td>
@@ -470,7 +470,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:32%;"></span></div><span class="small-text ">8%</span></td>
     </tr>
     <tr>
-      <td><span id="j-bow" class="record-name">J Bow</span></span><br /><img src="/assets/img/weapons/j bow.gif" alt="J Bow" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#centaur">Centaur</a></li><li><a href="enemies#gorgon">Gorgon</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
+      <td><span id="j-bow" class="record-name">J Bow</span></span><br /><img src="/assets/img/weapons/j bow.gif" alt="J Bow" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#centaur">Centaur</a></li><li><a href="enemies#gorgon">Gorgon</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:50%;"></span></div><span class="small-text ">50%</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="small-text ">105</span></td>
@@ -549,7 +549,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:0.4%;"></span></div><span class="small-text ">0.1%</span></td>
     </tr>
     <tr>
-      <td><span id="avadavra-wand" class="record-name">Avadavra Wand</span></span><br /><img src="/assets/img/weapons/avadavra wand.gif" alt="Avadavra Wand" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">6000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#mysterious-summoner2">Mysterious Summoner</a></li><li><a href="enemies#mysterious-summoner1">Furious Summoner</a></li><li><a href="enemies#masked-magus">Masked Magus</a></li></ul></details></td>
+      <td><span id="avadavra-wand" class="record-name">Avadavra Wand</span></span><br /><img src="/assets/img/weapons/avadavra wand.gif" alt="Avadavra Wand" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">6000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#mysterious-summoner1">Furious Summoner</a></li><li><a href="enemies#mysterious-summoner2">Mysterious Summoner</a></li><li><a href="enemies#masked-magus">Masked Magus</a></li></ul></details></td>
       <td>80</td>
       <td><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="small-text ">Always hits</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:76%;"></span></div><span class="small-text ">80</span></td>
@@ -563,7 +563,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:0.4%;"></span></div><span class="small-text ">0.1%</span></td>
     </tr>
     <tr>
-      <td><span id="khabir's-shaft" class="record-name">Khabir's Shaft</span></span><br /><img src="/assets/img/weapons/khabir's shaft.gif" alt="Khabir's Shaft" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#satyr">Satyr</a></li><li><a href="enemies#siren">Siren</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
+      <td><span id="khabir's-shaft" class="record-name">Khabir's Shaft</span></span><br /><img src="/assets/img/weapons/khabir's shaft.gif" alt="Khabir's Shaft" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">7000</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#golden-guardian">Golden Guardian</a></li><li><a href="enemies#ice-guardian">Frozen Guardian</a></li><li><a href="enemies#satyr">Satyr</a></li><li><a href="enemies#siren">Siren</a></li><li><a href="enemies#will-o-wisp">Will-o’-Wisp</a></li></ul></details></td>
       <td>100</td>
       <td><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="small-text ">Always hits</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:80%;"></span></div><span class="small-text ">85</span></td>
