--- a/compendium/guide.html
+++ b/compendium/guide.html
@@ -68,7 +68,7 @@
       <a href="#battle">Battle</a>
     </li>
     <li>
-      <a href="#party-members">Party Members</a>
+      <a href="#allies">Allies</a>
     </li>
   </ul>
 </div>
@@ -952,20 +952,20 @@
 
 <hr />
 
-<h2 id="party-members">Party Members</h2>
+<h2 id="allies">Allies</h2>
 
 <p>You will encounter fighters who want to accompany you on your quest.</p>
 
-<p>Party members will join you in battle, taking their turn immediately after you. They have a set of skills and equipment that remains with them throughout your journey.</p>
+<p>Allies will join you in battle, taking their turn immediately after you. They have a set of skills and equipment that remains with them throughout your journey.</p>
 
-<p>An enemy may attack a party member. If a party member loses all their HP, they will be unable to fight until they rest at their house or an inn.</p>
+<p>An enemy may attack an ally. If an ally loses all their HP, they will be unable to fight until they rest at their house or an inn.</p>
 
-<p>Party members gain the same amount of XP as you after each battle. When they level up, they will gain 20 max HP and allocate 5 stat points to one of their primary stats.</p>
+<p>Allies gain the same amount of XP as you after each battle. When they level up, they will gain 20 max HP and allocate 5 stat points to one of their primary stats.</p>
 
 <table>
   <thead>
     <tr>
-      <th>Party Member</th>
+      <th>Ally</th>
       <th>Chosen Primary Stat</th>
     </tr>
   </thead>
