--- a/meet-the-cast.html
+++ b/meet-the-cast.html
@@ -8,14 +8,14 @@
 <meta property="og:title" content="Meet the Cast!" />
 <meta name="author" content="Ben Gardner" />
 <meta property="og:locale" content="en_US" />
-<link rel="canonical" href="http://localhost:4000/meet-the-cast.html" />
-<meta property="og:url" content="http://localhost:4000/meet-the-cast.html" />
+<link rel="canonical" href="http://localhost:4000/meet-the-cast" />
+<meta property="og:url" content="http://localhost:4000/meet-the-cast" />
 <meta property="og:site_name" content="Toshe’s Quest" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Meet the Cast!" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Ben Gardner"},"headline":"Meet the Cast!","url":"http://localhost:4000/meet-the-cast.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Ben Gardner"},"headline":"Meet the Cast!","url":"http://localhost:4000/meet-the-cast"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Toshe&apos;s Quest" /><link rel="stylesheet" href="/assets/css/my-style.css">
 <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
