--- a/tutorial.html
+++ b/tutorial.html
@@ -8,14 +8,14 @@
 <meta property="og:title" content="Tutorial" />
 <meta name="author" content="Ben Gardner" />
 <meta property="og:locale" content="en_US" />
-<link rel="canonical" href="http://localhost:4000/tutorial.html" />
-<meta property="og:url" content="http://localhost:4000/tutorial.html" />
+<link rel="canonical" href="http://localhost:4000/tutorial" />
+<meta property="og:url" content="http://localhost:4000/tutorial" />
 <meta property="og:site_name" content="Toshe’s Quest" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Tutorial" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Ben Gardner"},"headline":"Tutorial","url":"http://localhost:4000/tutorial.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Ben Gardner"},"headline":"Tutorial","url":"http://localhost:4000/tutorial"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Toshe&apos;s Quest" /><link rel="stylesheet" href="/assets/css/my-style.css">
 <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
