--- a/compendium/world-map.html
+++ b/compendium/world-map.html
@@ -80,9 +80,9 @@
   🚧 This page is a work in progress.
 </strong></p>
 
-<p>The map has not been drawn yet. Here’s an ASCII rendition of the world in the meantime.</p>
+<p>Somebody drew this semi-accurate doodle of the world, which will stand in as a placeholder until I can get my hands on a real map.</p>
 
-<p><a href="/assets/img/ascii-map.png"><img src="/assets/img/ascii-map.png" alt="World Map of Toshe's Quest" /></a></p>
+<p><a href="https://drive.google.com/uc?id=1moA4p-gISVOc98TSaGNK1exMelJ2jvgO"><img src="https://drive.google.com/uc?id=1moA4p-gISVOc98TSaGNK1exMelJ2jvgO" alt="World Map of Toshe's Quest" /></a></p>
 
           </div>
 
