--- a/download.html
+++ b/download.html
@@ -55,6 +55,10 @@
 
 <p>Available on <a href="https://github.com/1bengardner/toshes-quest-ii">GitHub</a>.</p>
 
+<h3 id="-saved-game-converter"><img src="assets/img/icons/up.gif" alt="" /> Saved Game Converter</h3>
+
+<p>Returning from an older version of Toshe’s Quest II? Convert saved games from v2 and earlier to be compatible with the latest version of Toshe’s Quest II. <a href="https://github.com/1bengardner/toshes-quest-ii-converter/releases/download/v1.0.0/Converter.exe">Click to download the converter</a>.</p>
+
   </div>
 
 </article>
