--- a/download.html
+++ b/download.html
@@ -56,6 +56,12 @@
 
 <p>Available on <a href="https://github.com/1bengardner/toshes-quest-ii">GitHub</a>.</p>
 
+<hr />
+
+<h3 id="-saved-game-editor"><img src="assets/img/hammer.png" alt="" /> Saved Game Editor</h3>
+
+<p>Change your stats and items for fun and profit. <a href="https://github.com/1bengardner/toshes-quest-ii-editor/releases/download/v1.0.0/editor.zip">Click here to download the zip</a>. Extract contents and run.</p>
+
 <h3 id="-saved-game-converter"><img src="assets/img/convert.png" alt="" /> Saved Game Converter</h3>
 
 <p>Returning from an older version of Toshe’s Quest II? Convert saved games from v2 and earlier to be compatible with the latest version of Toshe’s Quest II. <a href="https://github.com/1bengardner/toshes-quest-ii-converter/releases/download/v1.0.0/Converter.exe">Click to download the converter</a>.</p>
