--- a/download.html
+++ b/download.html
@@ -58,13 +58,15 @@
 
 <hr />
 
-<h3 id="-saved-game-editor"><img src="assets/img/hammer.png" alt="" /> Saved Game Editor</h3>
-
-<p>Change your stats and items for fun and profit. <a href="https://github.com/1bengardner/toshes-quest-ii-editor/releases/download/v1.0.0/editor.zip">Click here to download the zip</a>. Extract contents and run.</p>
+<p><span class="callout"><span class="emoji">ℹ️</span> The following applications must run in the same folder as Toshe’s Quest II.</span></p>
 
 <h3 id="-saved-game-converter"><img src="assets/img/convert.png" alt="" /> Saved Game Converter</h3>
 
 <p>Returning from an older version of Toshe’s Quest II? Convert saved games from v2 and earlier to be compatible with the latest version of Toshe’s Quest II. <a href="https://github.com/1bengardner/toshes-quest-ii-converter/releases/download/v1.0.0/Converter.exe">Click to download the converter</a>.</p>
+
+<h3 id="-saved-game-editor"><img src="assets/img/hammer.png" alt="" /> Saved Game Editor</h3>
+
+<p>Change your stats and items for fun and profit. <a href="https://github.com/1bengardner/toshes-quest-ii-editor/releases/download/v1.0.1-standalone/Editor.exe">Click to download the editor</a>.</p>
 
 <script type="text/javascript">
   const widget = document.getElementById("itchio-widget");
