--- a/download.html
+++ b/download.html
@@ -56,7 +56,7 @@
 
 <p>Available on <a href="https://github.com/1bengardner/toshes-quest-ii">GitHub</a>.</p>
 
-<hr />
+<h2 id="extras">Extras</h2>
 
 <p><span class="callout"><span class="emoji">ℹ️</span> The following applications must run in the same folder as Toshe’s Quest II.</span></p>
 
