--- a/tutorial.html
+++ b/tutorial.html
@@ -444,6 +444,10 @@
 </p>
 <br />
 <p>
+  Ready to play? Front crawl to the <a href="download">download page</a>.
+</p>
+<br />
+<p>
   If you want to dive deeper, check out these pages:
   <ul>
     <li>
