--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <div class="home"><h1 id="news">News</h1>
+        <div class="home"><p class="callout" style="float: right;">
+  ❓ <a href="about">What is Toshe's Quest?</a>
+</p>
+
+<h1 id="news">News</h1>
 
 
 
