--- a/compendium/miscellaneous.html
+++ b/compendium/miscellaneous.html
@@ -138,11 +138,11 @@
   <tbody>
     <tr>
       <td><span id="syvre-leaf" class="record-name">Syvre Leaf</span><br /><img src="/assets/img/miscellaneous/syvre leaf.gif" alt="Syvre Leaf" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#drone-bee">Drone Bee</a></li><li><a href="enemies#guard-bee">Guard Bee</a></li><li><a href="enemies#queen-bee">Queen Bee</a></li></ul></details></td>
-      <td>Be re-leafed.</td>
+      <td>Be re-leafed.<details><summary class="small-text">Game info</summary><p class="game-info">If you die with a Syvre Leaf, you will be revived with 12% to 50% of your max HP.</p></details></td>
     </tr>
     <tr>
-      <td><span id="brummo-mint" class="record-name">Brummo Mint</span><br /><img src="/assets/img/miscellaneous/brummo mint.gif" alt="Brummo Mint" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#satyr">Satyr</a></li><li><a href="enemies#centaur">Centaur</a></li><li><a href="enemies#siren">Siren</a></li><li><a href="enemies#gorgon">Gorgon</a></li><li><a href="enemies#harpy">Harpy</a></li><li><a href="enemies#minotaur">Minotaur</a></li><li><a href="enemies#skolopendra">Skolopendra</a></li><li><a href="enemies#pterripus">Pterripus</a></li><li><a href="enemies#cychreides">Cychreides</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#stymphalian-bird">Stymphalian Bird</a></li><li><a href="enemies#teumessian-fox">Teumessian Fox</a></li><li><a href="enemies#nemean-lion">Nemean Lion</a></li></ul></details></td>
-      <td>This herb can have surprising effects at an unexpected time.</td>
+      <td><span id="brummo-mint" class="record-name">Brummo Mint</span><br /><img src="/assets/img/miscellaneous/brummo mint.gif" alt="Brummo Mint" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#satyr">Satyr</a></li><li><a href="enemies#centaur">Centaur</a></li><li><a href="enemies#siren">Siren</a></li><li><a href="enemies#gorgon">Gorgon</a></li><li><a href="enemies#minotaur">Minotaur</a></li><li><a href="enemies#harpy">Harpy</a></li><li><a href="enemies#pterripus">Pterripus</a></li><li><a href="enemies#skolopendra">Skolopendra</a></li><li><a href="enemies#cychreides">Cychreides</a></li><li><a href="enemies#chimera">Chimera</a></li><li><a href="enemies#cerberus">Cerberus</a></li><li><a href="enemies#hydra">Hydra</a></li><li><a href="enemies#stymphalian-bird">Stymphalian Bird</a></li><li><a href="enemies#nemean-lion">Nemean Lion</a></li><li><a href="enemies#teumessian-fox">Teumessian Fox</a></li></ul></details></td>
+      <td>This herb can have surprising effects at an unexpected time.<details><summary class="small-text">Game info</summary><p class="game-info">The Brummo Mint causes you to defeat one non-boss enemy if you land a critical strike with a regular attack.</p></details></td>
     </tr>
     <tr>
       <td><span id="nutritious-mushroom" class="record-name">Nutritious Mushroom</span><br /><img src="/assets/img/miscellaneous/nutritious mushroom.gif" alt="Nutritious Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">500</span></td>
@@ -170,11 +170,11 @@
     </tr>
     <tr>
       <td><span id="psilocybin" class="record-name">Psilocybin</span><br /><img src="/assets/img/miscellaneous/psilocybin.gif" alt="Psilocybin" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">3000</span></td>
-      <td>May alter your experience.</td>
+      <td>May alter your experience.<details><summary class="small-text">Game info</summary><p class="game-info">Psilocybin causes you to gain 100% to 1000% XP each battle. There is a 9% chance that you will gain no XP and the Psilocybin will be consumed.</p></details></td>
     </tr>
     <tr>
       <td><span id="the-good-stuff!" class="record-name">The good stuff!</span><br /><img src="/assets/img/miscellaneous/the good stuff!.gif" alt="The good stuff!" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">6000</span></td>
-      <td>Doubles your drop chance. May also kill you.</td>
+      <td>Doubles your drop chance. May also kill you.<details><summary class="small-text">Game info</summary><p class="game-info">The good stuff! has a 5% chance to kill you.</p></details></td>
     </tr>
     <tr>
       <td><span id="boulderwort" class="record-name">Boulderwort</span><br /><img src="/assets/img/miscellaneous/boulderwort.gif" alt="Boulderwort" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">100</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#moghi">Moghi</a></li></ul></details></td>
@@ -248,7 +248,7 @@
   <tbody>
     <tr>
       <td><span id="scintillous-ring" class="record-name">Scintillous Ring</span><br /><img src="/assets/img/miscellaneous/scintillous ring.gif" alt="Scintillous Ring" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span></td>
-      <td>Absorbs XP and increases luck while worn. Resets when unequipped.</td>
+      <td>Absorbs XP and increases luck while worn. Resets when unequipped.<details><summary class="small-text">Game info</summary><p class="game-info">Your chance of getting a prefixed equipment drop increases by 1% for every ring level.</p></details></td>
     </tr>
   </tbody>
 </table>
@@ -265,7 +265,7 @@
   <tbody>
     <tr>
       <td><span id="macedonian-protector" class="record-name">Macedonian Protector</span><br /><img src="/assets/img/miscellaneous/macedonian protector.gif" alt="Macedonian Protector" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">0</span><details><summary class="small-text">Dropped by</summary><ul><li><a href="enemies#president-of-macedonia">President of Macedonia</a></li></ul></details></td>
-      <td>Increases block chance while defending.</td>
+      <td>Increases block chance while defending.<details><summary class="small-text">Game info</summary><p class="game-info">While defending, the Macedonian Protector increases block chance by 5%. Unlike the flat 25% block chance increase from defending, the Macedonian Protector's block chance is affected by the block chance formula.</p></details></td>
     </tr>
     <tr>
       <td><span id="ominous-orb" class="record-name">Ominous Orb</span><br /><img src="/assets/img/miscellaneous/ominous orb.gif" alt="Ominous Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">0</span></td>
@@ -273,11 +273,11 @@
     </tr>
     <tr>
       <td><span id="chasmic-rucksack" class="record-name">Chasmic Rucksack</span><br /><img src="/assets/img/miscellaneous/chasmic rucksack.gif" alt="Chasmic Rucksack" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">15000</span></td>
-      <td>You could even fit a Telamon Shield in this.</td>
+      <td>You could even fit a Telamon Shield in this.<details><summary class="small-text">Game info</summary><p class="game-info">The Chasmic Rucksack increases your inventory capacity to 16.</p></details></td>
     </tr>
     <tr>
       <td><span id="olympian-ointment" class="record-name">Olympian Ointment</span><br /><img src="/assets/img/miscellaneous/olympian ointment.gif" alt="Olympian Ointment" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">200</span></td>
-      <td>A serum that can be applied to rock formations …with varying results.</td>
+      <td>A serum that can be applied to rock formations …with varying results.<details><summary class="small-text">Game info</summary><p class="game-info">Olympian Ointment can be applied to the entrance of the Lair of the Magi, the Golem Cavern, Yaouw Volcano, The Stone of Macedonia and the foot of the desert-peninsula tunnel.</p></details></td>
     </tr>
     <tr>
       <td><span id="sigil-of-ascension" class="record-name">Sigil of Ascension</span><br /><img src="/assets/img/miscellaneous/sigil of ascension.gif" alt="Sigil of Ascension" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">1</span></td>
@@ -334,7 +334,7 @@
     </tr>
     <tr>
       <td><span id="knightly-orb" class="record-name">Knightly Orb</span><br /><img src="/assets/img/miscellaneous/knightly orb.gif" alt="Knightly Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">0</span></td>
-      <td>Bestows 5% block chance.</td>
+      <td>Bestows 3% block chance.</td>
     </tr>
     <tr>
       <td><span id="feline-orb" class="record-name">Feline Orb</span><br /><img src="/assets/img/miscellaneous/feline orb.gif" alt="Feline Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Euros" /> <span title="Price" style="vertical-align: middle;">0</span></td>
